--- a/astro-personal-site/src/layouts/Main.astro
+++ b/astro-personal-site/src/layouts/Main.astro
@@ -5,7 +5,7 @@ import Footer from '../components/Footer.astro'
 import '../styles/global.css'
 
 type Props = {
-  title: string
+  title: string;
 }
 
 const { title } = Astro.props
