--- a/astro-personal-site/src/pages/index.astro
+++ b/astro-personal-site/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 // Component script section
 import Main from '../layouts/Main.astro'
+import Cards from '../components/Cards.astro'
 const profilePicture = "https://i.imgur.com/JPGFE75.jpg"
 ---
 
@@ -16,6 +17,27 @@ const profilePicture = "https://i.imgur.com/JPGFE75.jpg"
 			</div>
 		</div>
 	</body>
+	
+	<Cards cards={[
+		{
+			title: "Here are my guiding philosophies for life",
+			gradientFrom: "818cf8",
+			gradientTo: "d8b4fe",
+			to: "/philosophies"
+		},
+		{
+			title: "A summary of my work history",
+			gradientFrom: "fde68a",
+			gradientTo: "fca5a5",
+			to: "/work-summary"
+		},
+		{
+			title: "What I do beyond technology",
+			gradientFrom: "6ee7b7",
+			gradientTo: "9333ea",
+			to: "/beyond-tech"
+		}
+	]} />
 </Main>
 
 <style>
