--- a/astro-personal-site/src/components/Card.astro
+++ b/astro-personal-site/src/components/Card.astro
@@ -9,7 +9,7 @@ export type Props = {
 const { to, title, gradientFrom, gradientTo } = Astro.props;
 ---
 
-<a href={to} class="card">
+<a href={to} class="card" data-gradientfrom={gradientFrom}>
   <div class="card__inner">
     <div class="card__title">{title}</div>
     <div class="card__footer">&rarr;</div>
@@ -57,3 +57,12 @@ const { to, title, gradientFrom, gradientTo } = Astro.props;
     margin: auto 0 0 auto;
   }
 </style>
+
+<script>
+  const card = document.querySelector('.card')
+
+  if(card instanceof HTMLElement) {
+    console.log(card.dataset.gradientfrom);
+  }
+  // console.log(gradientFrom)
+</script>
