--- a/astro-personal-site/src/pages/index.astro
+++ b/astro-personal-site/src/pages/index.astro
@@ -38,6 +38,31 @@ const profilePicture = "https://i.imgur.com/JPGFE75.jpg"
 			to: "/beyond-tech"
 		}
 	]} />
+
+	<div class="featured-blogs">
+		<h3 class="featured-blogs__title">Featured Blogs</h3>
+		<p class="featured-blogs__description">
+			Opinion pieces that will change everything you know about web development.
+		</p>
+	</div>
+
+	<ol>
+		<li>
+			<a href="blogs/typescript-is-the-new-javascript">
+				Typescript is the new JavaScript
+			</a>
+		</li>
+		<li>
+			<a href="blogs/rust-javascript-tooling">
+				Why Rust is the future of JavaScript tooling
+			</a>
+		</li>
+		<li>
+			<a href="blogs/sleep-more">
+				Why you should sleep more
+			</a>
+		</li>
+	</ol>
 </Main>
 
 <style>
