--- a/astro-personal-site/src/pages/index.astro
+++ b/astro-personal-site/src/pages/index.astro
@@ -3,6 +3,13 @@
 import Main from '../layouts/Main.astro'
 import Cards from '../components/Cards.astro'
 const profilePicture = "https://i.imgur.com/JPGFE75.jpg"
+
+// Astro.glob
+const blogs = await Astro.glob<{
+  poster: string;
+  title: string;
+  subtitle: string;
+}>("../pages/blogs/*.md");
 ---
 
 <!-- Component template section -->
@@ -45,24 +52,17 @@ const profilePicture = "https://i.imgur.com/JPGFE75.jpg"
 			Opinion pieces that will change everything you know about web development.
 		</p>
 	</div>
-
-	<ol>
-		<li>
-			<a href="blogs/typescript-is-the-new-javascript">
-				Typescript is the new JavaScript
-			</a>
-		</li>
-		<li>
-			<a href="blogs/rust-javascript-tooling">
-				Why Rust is the future of JavaScript tooling
-			</a>
-		</li>
-		<li>
-			<a href="blogs/sleep-more">
-				Why you should sleep more
-			</a>
-		</li>
-	</ol>
+	  <ol>
+    {
+      blogs.map((blog) => (
+        <li class="blogs__list">
+          <a href={blog.url} class="blog__link">
+            {blog.frontmatter.title}
+          </a>
+        </li>
+      ))
+    }
+  	</ol>
 </Main>
 
 <style>
@@ -85,6 +85,43 @@ const profilePicture = "https://i.imgur.com/JPGFE75.jpg"
 	.profile__picture {
 		border-radius: 50%;
 		margin: 0 2rem 1rem 0
+	}
+
+	.featured-blogs {
+		margin: 0;
+		padding: 3rem 0 0 0;
+	}
+
+	.featured-blogs__title {
+		font-size: 2rem;
+		color: var(--grey-900);
+	}
+	.featured-blogs__description {
+		margin-top: -1.2rem;
+	}
+
+	.blogs {
+		font-size: 1rem;
+		font-weight: 500;
+	}
+
+	.blog__list {
+		border-bottom: 1px solid;
+		border-color: var(--grey-200);
+	}
+
+	.blog__link {
+		opacity: 1;
+		height: 100%;
+		display: block;
+		padding: 1rem 0;
+		color: var(--grey-200);
+		text-decoration: none;
+		transition: opacity 0.2s ease-in-out;
+	}
+
+	.blog__link:hover {
+		opacity: 0.7;
 	}
 </style>
 
