--- a/astro-test/src/pages/index.astro
+++ b/astro-test/src/pages/index.astro
@@ -1,14 +1,5 @@
 ---
-import Head from '../components/Head.astro'
-import Body from '../components/Body.astro'
-import Style from '../components/Style.astro'
-import Script from '../components/Script.astro'
+import Testing from '../components/Testing.astro';
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-  <Head />
-  <Body />
-  <Style />
-  <Script />
-</html>
+<Testing />
