14. Similarities and Differences to JSX

--- a/astro-test/src/components/Text.astro
+++ b/astro-test/src/components/Text.astro
@@ -1,8 +1,9 @@
 ---
-const { as: As } = Astro.props
+const { as: As, name } = Astro.props
 ---
 
 <As>
+  The user's name is { name || "--" }
   <slot />
 </As>
 
