Section 04: Steps 3 & 4 Write and Render the Framework Component

--- a/04-astro-islands-showcase/src/pages/index.astro
+++ b/04-astro-islands-showcase/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
 import DefaultIslandLayout from "../layouts/DefaultIslandLayout.astro";
+import { UpvoteContent } from '../components/UpvoteContent.jsx';
 ---
 
 <DefaultIslandLayout>
   <!-- Render our framework component -->
+  <UpvoteContent />
 </DefaultIslandLayout>
