--- a/04-astro-islands-showcase/src/pages/index.astro
+++ b/04-astro-islands-showcase/src/pages/index.astro
@@ -5,5 +5,5 @@ import { UpvoteContent } from '../components/UpvoteContent.jsx';
 
 <DefaultIslandLayout>
   <!-- Render our framework component -->
-  <UpvoteContent />
+  <UpvoteContent client:load  />
 </DefaultIslandLayout>
