Section 04: The Client: load, only, idle, visible, media

--- a/04-astro-islands-showcase/src/pages/index.astro
+++ b/04-astro-islands-showcase/src/pages/index.astro
@@ -5,5 +5,5 @@ import { UpvoteContent } from '../components/UpvoteContent.jsx';
 
 <DefaultIslandLayout>
   <!-- Render our framework component -->
-  <UpvoteContent client:load  />
+  <UpvoteContent client:media="(max-width: 30em)"  />
 </DefaultIslandLayout>
