Section 04: Using Multiple Slots in Framework Components

--- a/04-astro-islands-showcase/src/pages/index.astro
+++ b/04-astro-islands-showcase/src/pages/index.astro
@@ -7,9 +7,17 @@ import UpvoteContentVue from '../components/UpvoteContent.vue'
 <DefaultIslandLayout>
   <!-- Render our framework component -->
   <UpvoteContent client:load label="Click">
-    <em>An upvote counter created using React</em>
+    <em slot="description">An upvote counter created using React</em>
+    <ul slot="awesome">
+      <li>Youa re awesome</li>
+      <li>The tutor is awesome</li>
+    </ul>
   </UpvoteContent>
   <UpvoteContentVue client:load>
-    <em>An upvote counter created using Vue</em>
+    <em slot="description">An upvote counter created using Vue</em>
+    <ul slot="awesome">
+      <li>Youa re awesome</li>
+      <li>The tutor is awesome</li>
+    </ul>
   </UpvoteContentVue>
 </DefaultIslandLayout>
